force-app/main/default/objects/leaseworks__CRM_Analytics_Full_Screen_Config__mdt/leaseworks__CRM_Analytics_Full_Screen_Config__mdt.object-meta.xml
<CustomObject>
    <label>CRM Analytics Full Screen Config</label>
    <pluralLabel>CRM Analytics Full Screen Configs</pluralLabel>
</CustomObject>