force-app/main/default/objects/leaseworks__CRM_Analytics_Full_Screen_Config__mdt/fields/leaseworks__Button_API__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Button_API__c</fullName>
    <inlineHelpText>API of the button on the related Object for which this configuration record applies to</inlineHelpText>
    <label>Button API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>