force-app/main/default/objects/leaseworks__CRM_Analytics_Full_Screen_Config__mdt/fields/leaseworks__Dataset_Field_API__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dataset_Field_API__c</fullName>
    <inlineHelpText>API of the field from the CRM Analytics dataset to be used as dashboard filter</inlineHelpText>
    <label>Dataset Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>