force-app/main/default/objects/leaseworks__CRM_Analytics_Full_Screen_Config__mdt/fields/leaseworks__Object_API__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Object_API__c</fullName>
    <inlineHelpText>API of the object for which this configuration record applies to</inlineHelpText>
    <label>Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>