force-app/main/default/objects/leaseworks__CRM_Analytics_Full_Screen_Config__mdt/fields/leaseworks__ShowSharing__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ShowSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Displays a Share button on the top right of the popup (under the X sign), which when clicked allows to export the dashboard to an image and it also indirectly enables functionality to export tables to Excel (requires a non-free CRMA licence)</inlineHelpText>
    <label>ShowSharing</label>
    <type>Checkbox</type>
</CustomField>